Replace `new HashSet<>(Arrays.asList` with `Set.of` (#4272)
Simplifies the code and is faster because it avoids intermediate
creation of:
- `List`
- varargs array

<details>
  <summary>JMH Benchmark</summary>

  ```java
import org.openjdk.jmh.annotations.*;
import java.util.*;
import java.util.concurrent.TimeUnit;

@BenchmarkMode(Mode.AverageTime)
@OutputTimeUnit(TimeUnit.NANOSECONDS)
@Warmup(iterations = 5, time = 1, timeUnit = TimeUnit.SECONDS)
@Measurement(iterations = 200, time = 10, timeUnit =
TimeUnit.MILLISECONDS)
@State(Scope.Benchmark)
public class ToSetBenchmark {
    @Benchmark
    public Collection<String> arraysAsList() {
        return new HashSet<>(Arrays.asList("key0", "key1"));
    }

    @Benchmark
    public Collection<String> setOf() {
        return Set.of("key0", "key1");
    }
}
```
</details>

| Benchmark           | Time (ns/op) | Allocation Rate (B/op) |
|---------------------|--------------|------------------------|
| `Arrays.asList` (before)   | 19        | 232              |
| `Set.of` (after) | 3        | 24                    |

GitOrigin-RevId: 9f8436aaae30bcfc11541d30ab9b32a7eabf5638