@@ -48,6 +48,7 @@ import org.junit.runner.RunWith;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 import static com.hazelcast.function.FunctionEx.identity;
@@ -181,7 +182,7 @@ public class MetricsTest extends JetTestSupport {
         JobMetricsChecker checker = new JobMetricsChecker(job);
         checker.assertSummedMetricValue("mapped", 3L);
         assertEquals(
-                new HashSet<>(Arrays.asList(10L, 20L, 30L)),
+                Set.of(10L, 20L, 30L),
                 new HashSet<>(instance.getList("results"))
         );
     }
